# CopyScript

./: .gitignore  AGENTS.md  CLAUDE.md  CopyScript.spec  README.md  app_paths.py  app_settings.json  build.ps1  build.sh  clipboard_monitor.py  clipboard_watchers.py  install.ps1  install.sh  main.py  menubar.py  notifier.py  output.txt  pyproject.toml  requirements.txt  subtitle_cache.py  subtitle_fetcher.py  uninstall.ps1  uninstall.sh  url_parser.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
copyscript/: main.py
copyscript/app/: __init__.py  controller.py  logging_setup.py  runtime_options.py  settings_store.py
copyscript/config/: __init__.py  constants.py  languages.py  models.py
copyscript/core/: __init__.py  clipboard_monitor.py  subtitle_cache.py  subtitle_fetcher.py  url_parser.py
copyscript/platform/: __init__.py  app_paths.py  clipboard_watchers.py  launch_at_login.py  menubar.py  notifier.py  tray.py
copyscript/ui/: theme.py  window.py
copyscript/ui/panels/: __init__.py  cache_panel.py  controls_panel.py  history_panel.py  settings_panel.py  status_panel.py
docs/: architecture-overhaul-status.md
tests/: test_app_paths.py  test_clipboard_monitor.py  test_clipboard_watchers.py  test_launch_at_login.py  test_runtime_options.py  test_settings_store.py  test_subtitle_cache.py  test_tray.py  test_window.py
